# itlab

./: .gitignore  CMakeLists.txt
Source/: Main.cpp  Math.cpp
TestLib/: CMakeLists.txt
TestLib/Include/: TMath.h
TestLib/Source/: TMath.cpp
