cmake_minimum_required(VERSION 3.5)

project(TestLib)

option(BUILD_SHARED_LIBS OFF)

set(TESTLAB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Source)
set(TESTLAB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Include)
set(TESTLAB_SOURCE_FILES ${TESTLAB_SOURCE_DIR}/Math.cpp)
set(TESTLAB_INCLUDE_FILES ${TESTLAB_INCLUDE_DIR}/Math.h)

add_library(TestLab ${TESTLAB_SOURCE_FILES} ${TESTLAB_INCLUDE_FILES})
target_include_directories(TestLab PUBLIC ${TESTLAB_INCLUDE_DIR})