cmake_minimum_required(VERSION 3.5)

project(TestLib)

set(TESTLIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Source)
set(TESTLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Include)
set(TESTLIB_SOURCE_FILES ${TESTLIB_SOURCE_DIR}/TMath.cpp)
set(TESTLIB_INCLUDE_FILES ${TESTLIB_INCLUDE_DIR}/TMath.h)

add_library(TestLib ${TESTLIB_SOURCE_FILES} ${TESTLIB_INCLUDE_FILES})
target_include_directories(TestLib PUBLIC ${TESTLIB_INCLUDE_DIR})